# Ghost2_Comfyui

./: README.md  __init__.py  download.sh  ghost2_model.py  ghost2_pipeline.py  ghost2_workflow.json  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/: stylematte.py
src/aligner/: __init__.py  aligner.py  embedder.py  generator.py
src/blender/: blender.py
utils/: crops.py
